--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Y.M AnimeList</title>
-    <style></style>
+    <title>Y.M List</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1></h1>
- 
+    <p class="title zh">動畫清單</p>
+    <p class="title en">List Provided By Google Drive</p>
+    <div class="bar">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Year</a>
+                <ul class="dropdown">
+                    <li><a href="#" id="2020">2016 - 2020</a></li>
+                    <li><a href="#" id="2015">2011 - 2015</a></li>
+                    <li><a href="#" id="2010">2006 - 2010</a></li>
+                    <li><a href="#" id="2005"> -2005 </a></li>
+                </ul>
+            </li>
+            <li><a href="#">Recommend</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
+    </div>
 </body>
 </html>
